[package]
name = "blocklist"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.136"
serde_json = "1.0.68"
num-traits = "0.2.19"
arrayvec = "0.7.4"
cpp = "0.5.9"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
