[package]
name = "smallobjectpool"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A small object pool for Rust"
repository = "https://github.com/jmelo11/smallobjectpool"
readme = "readme.md"
homepage = "https://github.com/jmelo11/smallobjectpool"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
